Fix ordering, add spacing for projects, project admin style improvements

--- a/src/MartinDrozdik.Web/wwwroot/Web/Projects/ProjectListItem.scss
+++ b/src/MartinDrozdik.Web/wwwroot/Web/Projects/ProjectListItem.scss
@@ -29,7 +29,7 @@ $projectMaxWidth: 62rem;
     > li {
         display: flex;
         align-items: center;
-        margin: 1rem 0;
+        margin: 1.5rem 0;
         animation-name: FadeIn;
         animation-duration: 0.3s;
 
